Fixing lack of scrollbar issue

--- a/pcrs/resources/less/new-visualizer.less
+++ b/pcrs/resources/less/new-visualizer.less
@@ -29,7 +29,7 @@ hr {
     padding: 15px;
     vertical-align: top;
     overflow-x: auto;
-    overflow-y: hidden;
+    overflow-y: auto;
     max-height: 800px;
 }
 
